Commit 3 agrega estilo basico y pagina emigrapp

--- a/index.html
+++ b/index.html
@@ -4,27 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./assets/cuestionario.js"></script>
+    <link rel="stylesheet" href="css/estilos.css" />
     <title>EMIGRAPP</title>
 </head>
 <body>
-    <header>
-
-        <h2> EMIGRAPP HEADER EN CONSTRUCCION </h2>
-        
+    <header class="header__base">
+        <div ><!-- TITULO -->
+            <h1 > EMIGRAPP </h1>
+        </div> 
+        <div ><!-- MENU -->
+          <nav class="header__menuNav">
+            <a href="index.html" >  HOME  </a>                   
+            <a href="pages/emigrapp.html" >  EMIGRAR  </a>               
+          </nav>
+        </div>    
     </header>  
-
     <main>
-
-        <h2> EMIGRAPP PAGINA EN CONSTRUCCION </h2>
+        <section>
+            <div>
+                <h2> Bienvenido a Emigrapp. Un sitio que lo ayudara en su proceso de migracion. </h2>
+            </div>
+        </section>
+        <section>
+            <h3>Para iniciar, acceda al menu: Emigrar</h3>
+        </section>
+        
 
     </main>
-
-    <footer>
-
-        <h2> EMIGRAPP FOOTER EN CONSTRUCCION </h2>
-
-    </footer>
-
+    <footer class="header__base">
+        <h3> EMIGRAPP FOOTER EN CONSTRUCCION </h3>
+    </footer>  
 </body>
+
 </html>
