Commit 6 - DOM y Eventos v2

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
         </div> 
         <div ><!-- MENU -->
           <nav class="header__menuNav">
-            <a href="index.html" >  HOME  </a>                   
-            <a href="pages/emigrapp.html" >  EMIGRAR  </a>               
+            <a href="index.html" class="mx-2">  HOME  </a>                   
+            <a href="pages/emigrapp.html" class="mx-2">  EMIGRAR V1 </a> 
+            <a href="pages/cuestionario.html" class="mx-2" >  EMIGRAR DOM </a>              
           </nav>
         </div>    
     </header>  
