--- a/pages/emigrapp.html
+++ b/pages/emigrapp.html
@@ -17,8 +17,9 @@
         </div> 
         <div ><!-- MENU -->
           <nav class="header__menuNav">
-            <a href="../index.html" >  HOME  </a>                   
-            <a href="emigrapp.html" >  EMIGRAR  </a>               
+            <a href="../index.html" class="mx-2">  HOME  </a>                   
+            <a href="emigrapp.html" class="mx-2">  EMIGRAR V1  </a> 
+            <a href="cuestionario.html"class="mx-2" >  EMIGRAR DOM  </a>              
           </nav>
         </div> 
         
