--- a/pages/cuestionario.html
+++ b/pages/cuestionario.html
@@ -12,11 +12,11 @@
     <title>Cuestionario para emigrante</title>
 </head>
 <body>
-    <header class="header__base">
-        <div ><!-- TITULO -->
+  <header class="header__base">
+        <div >
             <h1 > EMIGRAPP </h1>
         </div> 
-        <div ><!-- MENU -->
+        <div >
           <nav class="header__menuNav">
             <a href="../index.html" class="mx-2" >  HOME  </a>                   
             <a href="emigrapp.html" class="mx-2">  EMIGRAR V1  </a> 
@@ -29,41 +29,44 @@
             <legend> Emigrapp. Ingrese sus datos.</legend>
             <fieldset class="card mx-4" style="width: 18rem; padding: 1rem;">
                 <p>
-                    <div class="form-floating mb-3 mx-4">
-                        <input type="text" class="form-control" id="nombre" placeholder="Juana Perez">
-                        <label for="nombre">Nombre completo</label>
+                    <div > <!-- class=" mb-3 mx-4" -->
+                        <label for="nombre">Nombre: </label>
+                        <input type="text"  id="nombre" placeholder="Juana Perez"> <!--class="form-control"-->  
+                    </div>
+                    <div class="my-2">
+                        <label for="edad">Edad: </label>
+                        <input type="number" id="edad" placeholder="00">
                     </div>
                 </p>
-                <p>
-                    <label for="edad">Edad </label>
-                    <input type="number" id="edad">
-                </p>
-                <select class="form-select my-3" aria-label="Default select example">
+                <select id="origen" class="form-select my-2" aria-label="Default select example">
                     <option selected>Seleccione su País de Origen </option>
-                    <option value="ARG">Argentina</option>
-                    <option value="URU">Uruguay</option>
-                    <option value="BRA">Brasil</option>
+                    <option value="Argentina">Argentina</option>
+                    <option value="Uruguay">Uruguay</option>
+                    <option value="Brasil">Brasil</option>
                 </select>
-                <select class="form-select my-3" aria-label="Default select example">
+                <select id="destino" class="form-select my-2" aria-label="Default select example">
                     <option selected>Seleccione su País Destino </option>
-                    <option value="ESP">España</option>
-                    <option value="FRA">Francia</option>
-                    <option value="ITA">Italia</option>
+                    <option value="España">España</option>
+                    <option value="Francia">Francia</option>
+                    <option value="Italia">Italia</option>
                 </select>
-                <p class="my-4">Ingrese su estado civil. </p>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="casado"> 
-                    <label class="form-check-label" for="casado">
-                    Casado
-                    </label>
+                <div id="estadocivil">
+                    <p class="my-2">Ingrese su estado civil. </p>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="casado" value="casado"> 
+                        <label class="form-check-label" for="casado">
+                        Casado
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="soltero" value="soltero" checked>
+                        <label class="form-check-label" for="soltero">
+                        Soltero
+                        </label>
+                    </div>    
                 </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="soltero" checked>
-                    <label class="form-check-label" for="soltero">
-                    Soltero
-                    </label>
-                </div>
-                <p class="my-4">Mascotas: </p>
+               
+                <p class="my-2">Mascotas: </p>
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="flexRadioDefault2" id="conMascota">
                     <label class="form-check-label" for="conMascota">
@@ -78,17 +81,19 @@
                 </div>
 
                 <p>
-                    <button id="botonResultado" type="submit" class="my-4">Enviar</button>
+                    <button id="botonResultado" type="submit" class="my-2">Enviar</button>
                 </p>
+                <div id="resultado" class="container text my-2">
+                    <label for="resultado"> Resultado: </label>
+                    <p id="textoResultado">
+                      Resultado Sin Ejecutar  
+                    </p>
+                </div>
+
             </fieldset>
         </form>
 
-        <div id="resultado" class="container text my-3">
-            <label for="resultado"> Resultado: </label>
-            <p id="textoResultado">
-              Resultado Sin Ejecutar  
-            </p>
-        </div>
+       
 
     </main>   
     <footer>
