--- a/pages/emigrapp.html
+++ b/pages/emigrapp.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/npm/luxon@2.4.0/build/global/luxon.min.js"></script>
     <script src="../assets/cuestionario.js"></script>
     <link rel="stylesheet" href="../css/estilos.css" />
     <title> EMIGRAPP Cuestionario </title>
